--- a/app/views/angelo/index.html.erb
+++ b/app/views/angelo/index.html.erb
@@ -1,2 +1,2 @@
-<h1 class="alert alert-info this-works">Hello World</h1>
+<h1>My Playlists</h1>
 <%= react_component("App", props: {user: current_user}, prerender: false) %>
