moves data fetching to server

--- a/app/views/angelo/index.html.erb
+++ b/app/views/angelo/index.html.erb
@@ -1,2 +1,2 @@
 <h1>My Playlists</h1>
-<%= react_component("App", props: {user: current_user}, prerender: false) %>
+<%= react_component("App", props: {data: @data}, prerender: false) %>
