--- a/app/views/angelo/index.html.erb
+++ b/app/views/angelo/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("App", props: {data: @data}, prerender: false) %>
+<%= react_component("App", props: { data: @data, user: @user}, prerender: false) %>
